	* Don't show any error messages and NaN values in the process behavior chart if no column or an empty column was selected
	* Remove unwanted entries on the undo stack that were created when modifying properties of the process behavior and run charts
	* Improve the quality of the fit model preview in the properties explorer and formula view in the random values dialog on hidpi screens

Improvements:
	* Improve handling of the tab-order to switch between the widgets in the properties explorer
	* Added Shift+Enter shortcut in the properties explorer to recalculate the results of formula and analysis curves

-----2.12.0 (2025-04-25) -----
New features:
	* [general]
		* Detail info view mode in the Color Maps Browser
		* Extend About dialog: Add links and buttons to copy environment and citation, show external depenencies
		* Make the changes in Note undo/redo-able
		* For the number format, allow to specify in the application settings both - the decimal and the group - separators
		* Automatically update the visualizations on number format changes without restart
	* [import]
		* Download datasets from kaggle.com
		* Only allow selecting matching import filter
		* Support MCAP file import
		* Show error messages for the serial port in when creating a live data source to notify directly about missing device permissions, etc.
		* Add warning when importing projects in file import dialog
		* Improve error messages for data import
		* Fix preview of data with header
		* Ask how to treat multilayer graphs when opening OPJ project
		* Improve error message handling
		* Improve livedata import
		* Add possibility to specify custom column datatypes (mandatory for livedata)
		* Notify about the unsupported UTF16 encoding (BUG 496215)
		* Read live data with multiple columns also for UDP and local sockets and for Serial Port
		* Faster import of big ASCII files on Windows
		* Read calculated value instead of formula text from excel sheets
	* [analysis]