@@ -33,6 +33,7 @@ Bug fixes:
 	* Don't show any error messages and NaN values in the process behavior chart if no column or an empty column was selected
 	* Remove unwanted entries on the undo stack that were created when modifying properties of the process behavior and run charts
 	* Improve the quality of the fit model preview in the properties explorer and formula view in the random values dialog on hidpi screens
+	* Fix save/load of the background color for the center value label in the process behavior chart
 
 Improvements:
 	* Improve handling of the tab-order to switch between the widgets in the properties explorer
